--- a/snippets/rust/Cargo.toml
+++ b/snippets/rust/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 bip39 = { version = "2", features = ["rand"] }
-breez-liquid-sdk = { git = "https://github.com/breez/breez-liquid-sdk", branch = "ok300-pay-onchain-limits" }
+breez-liquid-sdk = { git = "https://github.com/breez/breez-liquid-sdk", branch = "main" }
 log = "0.4"
 tokio = "1.29"
 
