--- a/snippets/dart_snippets/pubspec.yaml
+++ b/snippets/dart_snippets/pubspec.yaml
@@ -7,8 +7,19 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  breez_liquid:
+    git:
+      url: https://github.com/breez/breez-liquid-sdk-dart
   flutter_breez_liquid:
-    path: ./packages/breez-liquid-sdk-flutter
+    git:
+      url: https://github.com/breez/breez-liquid-sdk-flutter
+
+dependency_overrides:
+  # Enable overrides below to work with Liquid SDK packages locally
+  #breez_liquid:
+  #  path: ../../../breez-liquid-sdk/packages/dart
+  #flutter_breez_liquid:
+  #  path: ../../../breez-liquid-sdk/packages/flutter
 
 dev_dependencies:
   lints: ^3.0.0
