--- a/snippets/dart_snippets/pubspec.yaml
+++ b/snippets/dart_snippets/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_breez_liquid:
     git:
       url: https://github.com/breez/breez-liquid-sdk-flutter
+  rxdart: ^0.28.0  
 
 dependency_overrides:
   # Enable overrides below to work with Liquid SDK packages locally
