Revert "CI: Add swift to packages-to-publish"
This reverts commit c0f76580b2451412a75a5acbb9f54032f0dec407.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       repository: breez/breez-liquid-sdk
       ref: ${{ needs.setup.outputs.sdk-ref }}
       package-version: ${{ needs.setup.outputs.package-version }}
-      packages-to-publish: '["csharp", "flutter", "golang", "react-native", "python", "swift"]'
+      packages-to-publish: '["csharp", "flutter", "golang", "react-native", "python"]'
       use-dummy-binaries: true
 
   check-rust:
