--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       # Used only for Rust snippets
-      sdk-ref: ${{ inputs.sdk-ref }}
+      sdk-ref: ${{ inputs.sdk-ref || '0.1.2-dev4' }}
       # Used for RN and Flutter snippets
       package-version: '0.1.2-dev4'
     steps:
