--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
   build-packages:
     needs: setup
     name: build packages
-    uses: breez/breez-liquid-sdk/.github/workflows/publish-all-platforms.yml@main
+    uses: breez/breez-sdk-liquid/.github/workflows/publish-all-platforms.yml@main
     with:
-      repository: breez/breez-liquid-sdk
+      repository: breez/breez-sdk-liquid
       ref: ${{ needs.setup.outputs.sdk-ref }}
       package-version: ${{ needs.setup.outputs.package-version }}
       packages-to-publish: '["csharp", "flutter", "golang", "react-native", "python"]'
@@ -70,13 +70,13 @@ jobs:
       - name: temporarily get sdk
         uses: actions/checkout@v4
         with:
-          repository: breez/breez-liquid-sdk
+          repository: breez/breez-sdk-liquid
           ref: ${{ needs.setup.outputs.sdk-ref }}
-          path: breez-liquid-sdk
+          path: breez-sdk-liquid
 
       - id: rev-parse
         name: get proper rev
-        working-directory: breez-liquid-sdk
+        working-directory: breez-sdk-liquid
         run: |
           rev=$(git rev-parse HEAD)
           echo "$rev"
@@ -85,7 +85,7 @@ jobs:
       - name: set sdk version
         working-directory: snippets/rust
         run: |
-          cargo add --git https://github.com/breez/breez-liquid-sdk.git breez-liquid-sdk --rev "${{ steps.rev-parse.outputs.rev }}"
+          cargo add --git https://github.com/breez/breez-sdk-liquid.git breez-sdk-liquid --rev "${{ steps.rev-parse.outputs.rev }}"
 
       - name: clippy
         working-directory: snippets/rust
@@ -112,8 +112,8 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: breez-liquid-sdk-flutter-${{ needs.setup.outputs.package-version }}
-          path: snippets/dart_snippets/packages/breez-liquid-sdk-flutter
+          name: breez-sdk-liquid-flutter-${{ needs.setup.outputs.package-version }}
+          path: snippets/dart_snippets/packages/breez-sdk-liquid-flutter
 
       - name: pub-get
         working-directory: snippets/dart_snippets
