--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -159,6 +159,49 @@ jobs:
         working-directory: snippets/dart_snippets
         run: dart analyze --fatal-infos
 
+  check-golang:
+    needs:
+      - setup
+      - build-packages
+    name: Check Go snippets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
+
+      - name: Download archived package
+        uses: actions/download-artifact@v4
+        with:
+          name: breez-sdk-liquid-go-${{ needs.setup.outputs.package-version }}
+          path: snippets/go/packages/breez-sdk-liquid-go
+
+      - name: Format the Go snippets
+        working-directory: snippets/go
+        run: go fmt
+
+      - name: Test formatted correctly
+        working-directory: snippets/go
+        run: |
+          status=$(git status --porcelain)
+          if [[ -n "$status" ]]; then
+            echo "Git status has changes"
+            echo "$status"
+            git diff
+            exit 1
+          else
+            echo "No changes in git status"
+          fi
+
+      - name: Build the Go snippets
+        working-directory: snippets/go
+        run: |
+          go get
+          go build .
+
   check-react-native:
     needs: 
       - setup
