Add Python docs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -202,6 +202,42 @@ jobs:
           go get
           go build .
 
+  check-python:
+    needs:
+      - build-packages
+    name: Check Python snippets
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.8'
+  
+      - name: Download archived package
+        uses: actions/download-artifact@v4
+        with:
+          name: python-wheel-3.8-manylinux_2_31_x86_64
+          path: snippets/python/packages
+    
+      - name: Install dependencies
+        working-directory: snippets/python
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+          whlfile=$(ls packages | grep .whl)
+          pip install "packages/$whlfile"
+
+      - name: Check python formatting
+        working-directory: snippets/python/src
+        run: ruff check  --ignore F841 --ignore F401 --add-noqa . 
+
+      - name: Check python syntax
+        working-directory: snippets/python
+        run: python3 -m compileall src
+
   check-react-native:
     needs: 
       - setup
