feat: add CI job for mdbook-variables installation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -330,6 +330,7 @@ jobs:
         run: |
           cargo install mdbook --vers "^0.4" --locked
           cargo install --path ./snippets-processor
+          cargo install mdbook-variables --vers "^0.2" --locked
       
       - name: Build mdbook
         run: mdbook build
