--- a/snippets/dart_snippets/pubspec.yaml
+++ b/snippets/dart_snippets/pubspec.yaml
@@ -10,9 +10,11 @@ dependencies:
   breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-dart
+      tag: 0.3.1-dev4
   flutter_breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-flutter
+      tag: 0.3.1-dev4
   rxdart: ^0.28.0  
 
 dependency_overrides:
