--- a/book.toml
+++ b/book.toml
@@ -6,7 +6,7 @@ title = "Breez SDK - Liquid"
 
 [output.html]
 theme = "theme"
-additional-css = ["task-lists.css", "src/style/custom.css"]
+additional-css = ["task-lists.css"]
 additional-js = ["tabs.js"]
 git-repository-url = "https://github.com/breez/breez-sdk-liquid-docs"
 edit-url-template = "https://github.com/breez/breez-sdk-liquid-docs/edit/main/{path}"
