--- a/snippets/react-native/package.json
+++ b/snippets/react-native/package.json
@@ -15,6 +15,7 @@
         "react-native": "0.70.6"
     },
     "devDependencies": {
+        "@types/react-native": "^0.72.8",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
         "@typescript-eslint/parser": "^6.10.0",
         "eslint": "^8.0.1",
