--- a/snippets/rust/Cargo.toml
+++ b/snippets/rust/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 bip39 = { version = "2", features = ["rand"] }
-breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", rev = "a020ed5ddb53fdb6b8624f6eb70ee9e6e76e2ee4" }
+breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", tag = "0.6.0-dev1" }
 log = "0.4"
 tokio = "1.42.0"
 
