Fix version in workflow file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ on:
   workflow_dispatch:
     inputs:
       sdk-ref:
-        description: 'sdk commit/tag/branch reference. Defaults to 0.5.0-rc8'
+        description: 'sdk commit/tag/branch reference. Defaults to 0.6.0-dev1'
         required: false
         type: string
-        default: 0.5.0-rc8
+        default: 0.6.0-dev1
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -26,9 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       # Used only for Rust snippets
-      sdk-ref: ${{ inputs.sdk-ref || '0.5.0-rc8' }}
+      sdk-ref: ${{ inputs.sdk-ref || '0.6.0-dev1' }}
       # Used for RN and Flutter snippets
-      package-version: '0.5.0-rc8'
+      package-version: '0.6.0-dev1'
     steps:
       - run: echo "set pre-setup output variables"
 
