Rename Liquid SDK to Nodeless

--- a/book.toml
+++ b/book.toml
@@ -2,7 +2,7 @@
 language = "en"
 multilingual = true
 src = "src"
-title = "Breez SDK - Liquid"
+title = "Breez SDK - Nodeless"
 
 [output.html]
 theme = "theme"
