--- a/snippets/react-native/package.json
+++ b/snippets/react-native/package.json
@@ -10,11 +10,12 @@
         "compile": "tsc"
     },
     "dependencies": {
-        "@breeztech/react-native-breez-sdk-liquid": "^0.5.0-rc8",
+        "@breeztech/react-native-breez-sdk-liquid": "^0.6.0-dev1",
         "react": "18.1.0",
         "react-native": "0.70.6"
     },
     "devDependencies": {
+        "@types/react-native": "^0.72.8",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
         "@typescript-eslint/parser": "^6.10.0",
         "eslint": "^8.0.1",
