--- a/snippets/dart_snippets/pubspec.yaml
+++ b/snippets/dart_snippets/pubspec.yaml
@@ -10,14 +10,19 @@ dependencies:
   breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-dart
-      tag: 0.6.0-dev1
+      tag: 0.7.0-rc5
   flutter_breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-flutter
-      tag: 0.6.0-dev1
+      tag: 0.7.0-rc5
   rxdart: ^0.28.0  
 
 dependency_overrides:
+  # Comment out to use published packages
+  breez_liquid:
+    path: ./packages/breez-sdk-liquid-dart
+  flutter_breez_liquid:
+    path: ./packages/breez-sdk-liquid-flutter
   # Enable overrides below to work with Liquid SDK packages locally
   #breez_liquid:
   #  path: ../../../breez-sdk-liquid/packages/dart
