--- a/book.toml
+++ b/book.toml
@@ -10,6 +10,10 @@ additional-css = ["styles.css"]
 additional-js = ["tabs.js"]
 git-repository-url = "https://github.com/breez/breez-sdk-liquid-docs"
 edit-url-template = "https://github.com/breez/breez-sdk-liquid-docs/edit/main/{path}"
+no-section-label = true
+
+[output.html.fold]
+enable = true
 
 [output.html.print]
 enable = false
