--- a/examples/python/cli/pyproject.toml
+++ b/examples/python/cli/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-breez-sdk-liquid = "0.7.0-rc5"
+breez-sdk-liquid = "0.7.2"
 argparse = "^1.4.0"
 qrcode = "^7.4.2"
 colorama = "^0.4.6"
