--- a/snippets/react-native/package.json
+++ b/snippets/react-native/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@breeztech/react-native-breez-sdk-liquid": "^0.9.0",
+        "react-native-fs": "^2.20.0",
+        "react-native-secure-storage": "https://github.com/breez/react-native-secure-storage",
         "react": "18.1.0",
         "react-native": "0.70.6"
     },
