docs: update Dart snippets for flutter_breez_liquid after Cargokit migration

--- a/snippets/dart_snippets/pubspec.yaml
+++ b/snippets/dart_snippets/pubspec.yaml
@@ -13,14 +13,10 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   app_group_directory: ^2.0.0
   path_provider: ^2.0.0
-  breez_liquid:
-    git:
-      url: https://github.com/breez/breez-sdk-liquid-dart
-      ref: v0.11.2
   flutter_breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-flutter
-      ref: v0.11.2
+      ref: v0.11.3-dev7
   rxdart: ^0.28.0
 
 dependency_overrides:
