--- a/snippets/rust/Cargo.toml
+++ b/snippets/rust/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 anyhow = "1"
 bip39 = { version = "2", features = ["rand"] }
 breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", tag = "0.11.2" }
+breez-sdk-liquid-nwc = { git = "https://github.com/breez/breez-sdk-liquid/tree/main/lib/plugins/nwc" }
+async-trait = "0.1"
 log = "0.4"
 tokio = "1.42.0"
 
